# dfe-csc-api-data-flows

./: .gitattributes  .gitcliff.toml  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  clean.sh  cleanup_runs_keep_release_and_docs.sh  dev_setup_3_ssd_dfe_checksum_metadata_tbl.sql  full_ssd_extract_ref_cpy.sql  json_extract_from_ssd.sql  json_extract_ssd_base_plus_v2.sql  json_extract_ssd_base_plus_v3.sql  mkdocs.yml  output_sample_json_struc_fromDB.py  pyproject.toml  pytest.ini  rebaseline_repo.sh  release.sh  requirements.txt  sccm.yml  setup.sh  ssd_dfe_json_payload-sql-server-agent_v0.1.4.ps1  ssd_json_payload-sql-server-agent_v0.1.4.ps1  ssd_json_payload-sql-server-agent_v0.2.4.ps1  test.docx
.github/workflows/: build-api-pipeline-pkg.yml  build-api_pipeline.yml  build-release-exe.yml  gh-pages.yml  package-ci-pr.yml  release-and-docs.yml  release-pyinstaller.yml
admin/: ConstructFakeData_API_v0.8_6.ipynb  construct_fake_data_ssd_api_data_staging_anon.py  dev-loc_counter.py  dev-remove_file_history.sh  dev_gen_repo_structure.py  dev_repo_structure.txt  generate_sccm_graph.py  refresh_dev_backlog_page_from_github_api.py  repo_structure_overview.md  repo_structure_overview.txt  requirements.txt  stale-src-cleanup.txt  zip_repo.py
admin/admin_archive/: generate_sccm_graph.py  rebaseline_repo.sh  release_.sh
admin/current_bash_admin/: clean.sh
admin/d2i_dev/: dev_repo_structure.txt  fix_relative_imports.py  gitnore_BAK  output_sample_json_struct_fromSQL.py
admin/depreciated_api_pipeline/: populate_ssd_api_data_staging_2012+_DfECohort.sql
admin/depreciated_build_dfe_payload_staging/: populate_ssd_api_data_staging v0.1.0.sql  populate_ssd_api_data_staging_2012+_DfECohort - pre Dfe API adoptions fix.sql
admin/depreciated_docs/: PREV-api_python_deployment.md  admin-release_process.md
admin/depreciated_workflows/: gh-pages.yml  phase_1_dfe_api_credentials_test.ps1
admin/git_project_board/: project_items.json  secure_export_project_items.sh  secure_seed_refresh_project_items.sh
api_package/: db.py  decorators.py  main.py  overview.txt  payloads.py  update.py
api_package/tests/: conf_test.py  test_payloads.py  test_update.py
api_pipeline/: .env.example  README-CLI.md  README.md  __main__.py  api.py  auth.py  build.sh  config.py  csc_data_flows_api.ipynb  db.py  dfe_csc_api_testing.ipynb  entry_point.py  main.py  payload.py  pyproject.toml  requirements.txt  test.py  utils.py
api_pipeline/notebooks/: csc_api_pipeline_cli_wrapper.ipynb  csc_api_pipeline_fabric_flat.ipynb  dfe_csc_api_testing.ipynb  env.example.txt
api_pipeline/pshell/: api_payload_sender.ps1  phase_1_api_credentials_smoke_test.ps1  phase_1_api_credentials_smoke_test_0.2.1.ps1  phase_1_api_payload.ps1  phase_1_api_payload_0.4.0.ps1
api_pipeline/pshell_api_sender/: api_payload_sender.ps1
api_pipeline/scripts/: build.sh  build.yml
api_pipeline_pshell/: phase_1_api_payload.ps1  phase_1_dfe_api_credentials_test.ps1
api_sql_raw_json_query/: populate_ssd_api_data_staging.sql  populate_ssd_api_data_staging_2012.sql  populate_ssd_api_data_staging_2016sp1.sql
api_sql_raw_json_query/dev/: populate_ssd_api_data_staging.sql  populate_ssd_api_data_staging_balanced.sql
build_dfe_payload_staging/: populate_ssd_api_data_staging_2016.sql  ssd_cohort.sql
build_dfe_payload_staging/ALPHA/: README.md  populate_ssd_api_data_staging_2016_minimal.sql
build_dfe_payload_staging/dev/: 0.1.2-BAK-pre2016 refactor.sql  gitattributes  populate_ssd_api_data_staging_2012.sql  (+2 more)
d2i_dev/: 1_create_hash_table_v0.0.1.sql  1_create_hash_table_v0.0.2.sql  dev_db_field_list_for hash_tbl.sql  refresh_dev_backlog_page_from_github_api.py
d2i_json_outputs/: json_extract_ssd_base_plus_v3.json
dfe-csc-ea-pilot-onboarding/: index.html
docs/: 1_deploy_ssd.md  2_test_api.md  3_api_config.md  3_deploy_api.md  4_deploy_api.md  PREV-configure_api_script.md  UNPUBLISHED-feature_backlog.md  admin-actions_workflow_overview.md  admin-add_files_to_release_build.md  admin-cli_interface.md  admin-gitactions_workflows.md  admin-make_proxy_changes.md  admin-release_process.md  analyst_local_testing.md  api_config.md  api_powershell_deployment.md  api_powershell_guidance.md  api_python_deployment.md  api_usage.md  configure_api_script.md  data_anonymisation.md  data_security.md  deploy_api.md  deploy_ssd.md  deploy_ssd_schema.md  development_plan.md  feature_backlog.md  git_dev_backlog.md  gitactions_workflows.md  implementation_roadmap.md  index.md  json_payload_structure.md  payload_structure.md  refresh_dev_backlog_page_from_github_api.py  release.md  roadmap_implementation.md  roadmap_la_deployment.md  setup.md  stakeholders.md  system_requirements.md  (+2 more)
la-onboarding/: index.html  ssd_deployment_journey_slide.html
pre_flight_checks/: api_credentials_smoke_test.ps1  phase_1_api_credentials_smoke_test.ps1  ssd_vw_csc_api_schema_checks.sql
release_bundle/: .env.example  README.md  csc_api_pipeline-0.1.3-py3-none-any.whl
scripts/: gh_runs_cleanup.sh
sql_json_query/: populate_ssd_api_data_staging_2012+_DfECohort.sql  populate_ssd_api_data_staging_2012.sql  populate_ssd_api_data_staging_2016.sql  populate_ssd_api_data_staging_2016sp1-DfECohort.sql  populate_ssd_api_data_staging_2016sp1.sql  populate_ssd_api_data_staging_postgres.sql  ssd_csc_api_schema_checks.sql
(+76 files in other folders)
