[project]
name = "csc_api_pipeline"
version = "0.1.1"
description = "API payload builder and sender for CSC"
readme = "api_pipeline/README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "requests",
  "pyodbc",
  "python-dotenv",
  "memory-profiler"
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["api_pipeline*"]
