[project]
name = "csc-api-pipeline"
version = "0.1.0"
description = "Children’s Social Care API payload submission tool"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyodbc",
    "requests",
    "memory-profiler",
    "python-dotenv"
]

[project.scripts]
csc-pipeline = "main:main"

[tool.setuptools]
packages = ["api_pipeline"]
