[tool.setuptools]
packages = ["api_pipeline"]
include_package_data = true

[project]
name = "csc_api_pipeline"
version = "0.1.0"
description = "DfE API payload tool for CSC"
license = {text = "MIT"}
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
  "requests",
  "pyodbc",
  "python-dotenv"
]

[project.scripts]
csc-api = "api_pipeline.main:main"

[tool.setuptools.package-data]
# include .env.example in wheel/sdist
"api_pipeline" = ["*.env.example"]
